kubernetes/monitoring/jupyter/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: monitoring
  labels:
    app: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        tier: management
        component: cicd
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: jupyter/datascience-notebook:notebook-6.3.0@sha256:d4853e32b26a5c1e4ffcf8de8fb9ea5cac1d9e324974877eeca1e69c74af43f0
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          livenessProbe:
            tcpSocket:
              port: 8888
          readinessProbe:
            httpGet:
              path: /
              port: 8888
          volumeMounts:
            - name: jupyter-persistent-storage
              mountPath: /home/jovyan/work
      volumes:
        - name: jupyter-persistent-storage
          persistentVolumeClaim:
            claimName: jupyter-pvc
