kubernetes/monitoring/jupyter/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: monitoring
  labels:
    app: jupyter
spec:
  type: ClusterIP
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
