kubernetes/monitoring/jupyter/jupyter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter
  namespace: monitoring
  labels:
    app: jupyter
spec:
  rules:
    - host: jupyter.minikube
      http:
        paths:
          - path:
            backend:
              serviceName: jupyter
              servicePort: 8888
